--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <h1>Lession 3</h1>
     <div class="ex1">
-        <h2>Ex. 1 Числа от 1 до 100 с помощью цикла while</h2>
+        <h2>Ex. 1 Простые числа от 1 до 100 с помощью цикла while</h2>
         <button onclick="new From1To100()">Вперёд!</button>
         <p id="ex1_answer"></p>
     </div>
